Added Oak Dining Chair
Still need to fix bounding box on chair back and collision

--- a/resources/assets/mb/lang/en_us.lang
+++ b/resources/assets/mb/lang/en_us.lang
@@ -11,3 +11,4 @@ tile.table_birch.name=Birch Table
 tile.table_jungle.name=Jungle Table
 tile.table_acacia.name=Acacia Table
 tile.table_darkoak.name=Dark Oak Table
+tile.dining_chair_oak.name=Oak Dining Chair
