--- a/resources/assets/mb/lang/en_us.lang
+++ b/resources/assets/mb/lang/en_us.lang
@@ -11,4 +11,9 @@ tile.table_birch.name=Birch Table
 tile.table_jungle.name=Jungle Table
 tile.table_acacia.name=Acacia Table
 tile.table_darkoak.name=Dark Oak Table
+tile.dining_chair_acacia.name=Acacia Dining Chair
+tile.dining_chair_birch.name=Birch Dining Chair
+tile.dining_chair_darkoak.name=Dark Oak Dining Chair
+tile.dining_chair_jungle.name=Jungle Dining Chair
 tile.dining_chair_oak.name=Oak Dining Chair
+tile.dining_chair_spruce.name=Spruce Dining Chair
